--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,16 @@ keep_files:
 
 
 # Site settings
-title: Airspace
-subtitle: "A free HTML5 agency template"
+title: Kirsten O'Farrell
+subtitle: "My website for you."
 # Base URL of site. It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 # baseurl: "/" # the subpath of your site
-url: "http://luminousrubyist.github.io" # the base hostname & protocol for your site
-baseurl: "/airspace-jekyll"
+url: "http://www.kirstenofarrell.com" # the base hostname & protocol for your site
+baseurl: "/kirstenofarrell"
 cover: "/assets/cover.png"
-logo: "/assets/logo.png"
+logo: "/assets/KO-logo.png"
 
 # Build settings
 markdown: kramdown
