--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,14 @@
-
-exclude:
-  - "/vendor/"
-  - "Gemfile"
-  - "Gemfile.lock"
-  - "README.md"
-  - "LICENSE.md"
-  - "*.gemspec"
-
-keep_files:
-  - "CNAME"
-  - ".git"
-  - ".gitignore"
-
-
 # Site settings
 title: Kirsten O'Farrell
+email: kirsten.ofarrell@gmail.com
 subtitle: "My website for you."
 url: "http://www.kirstenofarrell.com" # the base hostname & protocol for your site
 baseurl: "/kirstenofarrell"
-cover: "/assets/cover.png"
-logo: "/assets/KO-logo.png"
+twitter_username: kirstenofarrell
+github_username:  abadfish
 
 # Build settings
 markdown: kramdown
-
-# Google analytics
-# ga_tracking_id: "UA-XXXX-1"
-
-# Category descriptions (for archive pages)
-descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
-
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
-
+permalink: pretty
 gems: ['kramdown']
 exclude: ['config.ru', 'Gemfile', 'Gemfile.lock', 'vendor', 'Procfile', 'Rakefile']
-
-# Base URL of site. It should always start with a slash,
-# and never end with a slash. Set it to a blank value if hosting at the
-# root of your server.
-# baseurl: "/" # the subpath of your site
