changed head to say filename instead of base url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Kirsten O'Farrell
 email: kirsten.ofarrell@gmail.com
 subtitle: "My website for you."
 url: "http://www.kirstenofarrell.com" # the base hostname & protocol for your site
-baseurl: "/kirstenofarrell"
+baseurl: "/kirstenofarrell-dot-com"
 twitter_username: kirstenofarrell
 github_username:  abadfish
 
